--- a/build.gradle
+++ b/build.gradle
@@ -14,10 +14,9 @@ buildscript {
 
 apply plugin: "kotlin"
 apply plugin: 'org.junit.platform.gradle.plugin'
-
+apply plugin: 'maven-publish'
 
 def usedDetektVersion="1.0.0-RC12"
-def spekVersion="1.2.1"
 def junitPlatformVersion="1.3.1"
 
 repositories {
@@ -29,6 +28,15 @@ test {
 	useJUnitPlatform()
 }
 
+publishing {
+	publications {
+		maven(MavenPublication) {
+			groupId 'com.kristofszilagyi'
+			version '0.1-SNAPSHOT'
+			from components.java
+		}
+	}
+}
 dependencies {
 	implementation "io.gitlab.arturbosch.detekt:detekt-api:$usedDetektVersion"
 	implementation "org.jetbrains.kotlin:kotlin-compiler-embeddable:$kotlin_version"
@@ -37,5 +45,4 @@ dependencies {
 	testImplementation 'io.kotlintest:kotlintest-runner-junit5:3.1.11'
 
 	testRuntimeOnly "org.junit.platform:junit-platform-launcher:$junitPlatformVersion"
-	testRuntimeOnly "org.jetbrains.spek:spek-junit-platform-engine:$spekVersion"
 }
